welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: ';' expected but 'return' found.
  if (vacation==true){if (day<=5 and 1<=day){return "10.00"} return "off"}
                                                             ^alarmClock:3: error: ';' expected but 'return' found.
  if (vacation==false){if (day<=5 and 1<=day){return "7.00"} return "10.00"}
                                                             ^